# MK7-Ghost-Manager

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-single-platform.yml
src/: app.cpp  app.h  main.cpp  pch.h  version.h
src/common/: alias.h  common.h  font.h  log.h  type.h  utils.h
src/core/: frame.h  panel.cpp  panel.h  window.cpp  window.h
src/file/: ghost.h  mii.h  spotpass.cpp  spotpass.h
src/gfx/: texture.cpp  texture.h
